[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyinstagraph"
authors = [{name = "Sina Khorami", email = "sinakhorami94@gmail.com"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.6"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/SinaKhorami/pyinstagraph"
